[package]
name = "hertel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parry2d = "*"
delaunator = "*"
pyo3 = {version = "*", features = ["extension-module"]}
numpy = "0.21.0"


[lib]
name = "hertel"
path = "src/lib.rs"
crate-type = ["cdylib"]
